// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. mobile primary image with caption and credits 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "paddingBottom": 15,
      "width": "100%",
    }
  }
>
  <View>
    <ModalImage
      aspectRatio={1.25}
      caption={
        <Caption
          credits="Some credits"
          text="Some caption"
        />
      }
      onImagePress={null}
      uri="https://img/someImage"
    />
  </View>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "paddingTop": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 16,
            }
          }
        >
          Some caption
        </Text>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 16,
            }
          }
        >
          SOME CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`2. tablet primary image with caption and credits 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flexDirection": "column",
      "paddingBottom": 15,
      "width": 640,
    }
  }
>
  <View>
    <ModalImage
      aspectRatio={1.25}
      caption={
        <Caption
          credits="Some credits"
          text="Some caption"
        />
      }
      onImagePress={null}
      uri="https://img/someImage"
    />
  </View>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingTop": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 16,
            }
          }
        >
          Some caption
        </Text>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 16,
            }
          }
        >
          SOME CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`3. mobile fullwidth image with caption and credits 1`] = `
<View
  style={
    Object {
      "marginBottom": 10,
      "maxWidth": 1194,
    }
  }
>
  <View>
    <ModalImage
      aspectRatio={1.25}
      caption={
        <Caption
          credits="Some credits"
          text="Some caption"
        />
      }
      onImagePress={null}
      uri="https://img/someImage"
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "maxWidth": 640,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingTop": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 16,
              "paddingHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          Some caption
        </Text>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 16,
              "paddingHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          SOME CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`4. tablet fullwidth image with caption and credits 1`] = `
<View
  style={
    Object {
      "marginBottom": 10,
      "maxWidth": 1194,
    }
  }
>
  <View>
    <ModalImage
      aspectRatio={1.25}
      caption={
        <Caption
          credits="Some credits"
          text="Some caption"
        />
      }
      onImagePress={null}
      uri="https://img/someImage"
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "maxWidth": 640,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingTop": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 16,
              "paddingHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          Some caption
        </Text>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 16,
              "paddingHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          SOME CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`5. secondary image with caption and credits 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "paddingBottom": 20,
      "paddingLeft": 0,
      "paddingRight": 0,
      "width": 640,
    }
  }
>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <ModalImage
      aspectRatio={1.5}
      caption={
        <Caption
          credits="Other credits"
          text="Another caption"
        />
      }
      onImagePress={null}
      uri="https://img/someImage"
    />
  </View>
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingTop": 0,
        "width": "50%",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingTop": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 16,
            }
          }
        >
          Another caption
        </Text>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 16,
            }
          }
        >
          OTHER CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`6. primary image with caption and credits with center caption override 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flexDirection": "column",
      "paddingBottom": 15,
      "width": 640,
    }
  }
>
  <View>
    <ModalImage
      aspectRatio={1.25}
      caption={
        <Caption
          credits="Some credits"
          text="Some caption"
        />
      }
      onImagePress={null}
      uri="https://img/someImage"
    />
  </View>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingTop": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 16,
              "paddingHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          Some caption
        </Text>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 16,
              "paddingHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          SOME CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`7. secondary image with caption and credits with center caption override 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "paddingBottom": 20,
      "paddingLeft": 0,
      "paddingRight": 0,
      "width": 640,
    }
  }
>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <ModalImage
      aspectRatio={1.5}
      caption={
        <Caption
          credits="Other credits"
          text="Another caption"
        />
      }
      onImagePress={null}
      uri="https://img/someImage"
    />
  </View>
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingTop": 0,
        "width": "50%",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingTop": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 16,
              "paddingHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          Another caption
        </Text>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 16,
              "paddingHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          OTHER CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;
